[gd_scene load_steps=2 format=3 uid="uid://c9y3l5m7n8q0"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.95, 0.9, 1, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Empathy Score: 0"
horizontal_alignment = 2

[node name="ScenarioPanel" type="Panel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScenarioLabel" type="Label" parent="VBoxContainer/ScenarioPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -100.0
offset_right = 300.0
offset_bottom = 100.0
text = "Scenario Text"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="FeedbackLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = ""
horizontal_alignment = 1

[node name="ButtonsContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="NextButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Next Story ->"